# NN

./: CMakeLists.txt  function_approximation.c  image_up.c  nn.h  xor.c
adder/: sum.c
adder/adders/: 1_bit_adder.nn  2_bit_adder.nn  3_bit_adder.nn  4_bit_adder.nn  5_bit_adder.nn  6_bit_adder.nn  7_bit_adder.nn  8_bit_adder.nn
include/: nn.h
number_recognizer/: UI.c  number.c  number_recognition.nn
src/: function_approximation.c  image_up.c  xor.c
src/adder/: sum.c
src/adder/adders/: 1_bit_adder.nn  2_bit_adder.nn  3_bit_adder.nn  4_bit_adder.nn  5_bit_adder.nn  6_bit_adder.nn  7_bit_adder.nn
src/number_recognizer/: UI.c  number.c  number_recognition.nn
